# vizalgo

./: .gitignore  Butterfly.ipynb  Intuitions.ipynb  LogAdder.ipynb  PrefixSum.ipynb  README.md  bootstrap.py  pyproject.toml
vizutils/: pyproject.toml
vizutils/src/vizutils/: __init__.py  exec_algo.py
